[package]
name = "abao"
version = "0.1.2"
authors = ["Jack O'Connor", "Rüdiger Klaehn"]
description = "an implementation of BLAKE3 verified streaming"
license = "CC0-1.0 OR Apache-2.0"
repository = "https://github.com/n0-computer/abao"
documentation = "https://docs.rs/abao"
readme = "README.md"
edition = "2021"

[dependencies]
arrayref = "0.3"
arrayvec = "0.7"
blake3 = "1"
futures = { version = "0.3", features = [], default-features = false, optional = true }
tokio = { version = "1", features = [], default-features=false, optional = true }

[features]
# todo: remove before merge
default = ["tokio_io", "group_size_16k"]
tokio_io = ["tokio", "futures"]
group_size_1k = [] # compatible with bao
group_size_2k = []
group_size_4k = []
group_size_8k = []
group_size_16k = []
group_size_32k = []
group_size_64k = []
group_size_128k = []
group_size_256k = []
group_size_512k = []
group_size_1024k = []

[dev-dependencies]
lazy_static = "1.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
rand_chacha = "0.3.1"
rand_xorshift = "0.3.0"
page_size = "0.4.1"
tokio = { version = "1", features = ["full"] }
